# Langchain-Project

./: .gitignore  README.md  pyproject.toml
CH-1/: 1_LLM_CALL.ipynb  2_MESSAGES.ipynb  3_Structured_output.ipynb
CH-2/: 1_FIRST_CHAIN.ipynb  2_CHAIN_WITH_CUSTOM_RUNNABLE.ipynb  3_Parallel_chain.ipynb  4_conditional_chain.ipynb
CH-3/: 1_reAct_agent_intro.ipynb  2_reAct_db_agent.ipynb  demo.py  init_db.py
CH-3/SalesDB/: sales.db
