[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=0.0.1",
    "python-dotenv>=1.2.2",
]
